k8s/server-delpoyment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      component: server
  template:
    metadata:
      labels: 
        component: server
    spec:
      imagePullSecrets:
        - name: ghcr-creds
      containers:
        - name: server
          image: ghcr.io/mohamm4c/multi-server
          ports: 
            - containerPort: 5000
